fixed the horizontal overflow problem in my web page

--- a/static/static.css
+++ b/static/static.css
@@ -1,4 +1,9 @@
-/* Remove browser default spacing */
+html,
+body {
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}/* Remove browser default spacing */
 *{
     margin: 0;
     padding: 0;
